--- a/my-app/src/app/footer/footer.component.html
+++ b/my-app/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="text-center bg-light text-dark py-4 position-relative">
+<footer class="text-center bg-light text-dark py-4 shadow-lg p-3 mb-5 bg-white">
     <img src="https://static-mh.content.disney.io/matterhorn/assets/goc/disney_logo_dark@2x-45d70f7dd57b.png" class="m-3">
     <span>© Disney © Disney•Pixar © & ™ Lucasfilm LTD © Marvel. Tutti I Diritti Riservati</span>
 </footer>
