change fonts and colors

--- a/my-app/src/app/card/card.component.css
+++ b/my-app/src/app/card/card.component.css
@@ -1,8 +1,10 @@
 .btn {
-    background-color:#71C671;
-    justify-content: center;
+    cursor: pointer;
+}
 
-
+* {
+    font-family: 'Princess Sofia', cursive;
+    font-family: 'Sofia', cursive;
     
 }
 
