--- a/my-app/src/app/card/card.component.html
+++ b/my-app/src/app/card/card.component.html
@@ -9,7 +9,7 @@
                         card's content.
                     </p>
 
-                    <button class="btn btn-success" (click)="TvShow(item)">Go to Films</button>
+                    <button class="btn btn-success m-5" (click)="TvShow(item)">Go to Films</button>
 
                 </div>
             </div>
