--- a/my-app/src/app/films/films.component.html
+++ b/my-app/src/app/films/films.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="card mb-3 shadow-lg p-3 mb-5 bg-white">
+    <div class="card mb-3 shadow-lg p-3 mb-5 bg-muted">
         <div class="row">
             <div class="col-md-4">
                 <img src="{{character.imageUrl}}" class="card-img-top h-100" alt="...">
@@ -7,15 +7,16 @@
             <div class="col-md-8">
                 <div class="card-body">
 
-                    <h1 class="card-title">{{character.name}}</h1>
-                    <h2 class="card-title">Tv Show</h2>
+                    <h1 class="card-title m-3">Name : {{character.name}}</h1>
+                    <h2 class="card-title m-3">Tv Show :</h2>
 
-                    <ul>
-                        <li *ngFor="let item of tvShow">{{item}}
+                    <ul class="list-group list-group-flush">
+                        <li *ngFor="let item of tvShow">{{item}}<hr>
 
                         </li>
 
                     </ul>
+                    
                 </div>
 
             </div>
